# animehub

./: .gitignore  EVENTS_SYSTEM_DESIGN.md  arquivos.txt  contexto_animehub.txt  pack.py  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  run_tests.py  schema.sql  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: anilist_query.rs  mpv_test.rs  playback_e2e_test.rs  playback_event_validation_test.rs  playback_invalid_state_test.rs  scan_validation_test.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 005_materialization_records.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: materialization_init.rs
src-tauri/src/application/: error_handling.rs  mod.rs  state.rs
src-tauri/src/application/commands/: anime_commands.rs  episode_commands.rs  file_commands.rs  mod.rs  (+2 more)
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src-tauri/src/domain/: anime_alias.rs  external_reference.rs  mod.rs
src-tauri/src/error/: mod.rs  types.rs
src-tauri/src/events/: materialization_events.rs  mod.rs  resolution_events.rs  types.rs
src-tauri/src/infrastructure/: mod.rs  subtitle_workspace.rs
src-tauri/src/integrations/: mod.rs
src-tauri/src/repositories/: anime_alias_repository.rs  anime_repository.rs  collection_repository.rs  episode_repository.rs  external_reference_repository.rs  file_repository.rs  materialization_repository.rs  mod.rs  sqlite_materialization_repository.rs  statistics_repository.rs  subtitle_repository.rs
src-tauri/src/services/: anime_service.rs  episode_service.rs  external_integration_service.rs  file_service.rs  materialization_service.rs  materialization_service_tests.rs  materialization_types.rs  mod.rs  playback_observer.rs  playback_service.rs  resolution_service.rs  resolution_service_hardening_tests.rs  resolution_service_tests.rs  statistics_service.rs  subtitle_service.rs
(+42 files in other folders)
