[package]
name = "animehub"
version = "0.1.0"
description = "Local-first anime library manager"
authors = ["AnimeHub Team"]
edition = "2021"

# ----------------------------------------
# Build dependencies
# ----------------------------------------
[build-dependencies]
tauri-build = { version = "2.0" }

# ----------------------------------------
# Runtime dependencies (used by the binary)
# ----------------------------------------
[dependencies]
# Tauri v2 core
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
windows = { version = "0.53", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_Security"
] }
regex = "1"



# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (SQLite) — BUNDLED to avoid sqlite3.lib issues on Windows
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# IDs & time
uuid = { version = "1.10", features = ["v4", "serde", "v5"] }
chrono = { version = "0.4", features = ["serde"] }

# Errors
thiserror = "2.0"
anyhow = "1.0"

# File system & hashing
dirs = "5.0"
walkdir = "2.5"
sha2 = "0.10"
notify = "6.1"

# Async / events
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# External integrations
reqwest = { version = "0.12", features = ["json"] }

# Subtitle processing
subparse = "0.7"
log = "0.4.29"

# ----------------------------------------
# Dev-only dependencies (tests, helpers)
# ----------------------------------------
[dev-dependencies]
tempfile = "3"
mockall = "0.13.0"

# ----------------------------------------
# Features
# ----------------------------------------
[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
